--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h3>sliders of images</h3>
+    <img src="images/Kim.png"alt="">
+    <img src="images/w7qyA_5c.jpg"alt="">
 </body>
 </html>
