added three pictures

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h3>sliders of images</h3>
     <img src="images/Kim.png"alt="">
     <img src="images/w7qyA_5c.jpg"alt="">
+    <img src="images/parrot.png"alt="">
 </body>
 </html>
